# Fast-API-project

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: c52fe63c8c9f_todo_schema.py  e29b7b445735_user_schema.py
app/: app.py  dependencies.py  helper.py
app/database/: db.py
app/database/schema/: __init__.py  todo_schema.py  user_schema.py
app/models/: todo.py  user.py
app/routing/: auth.py  todo.py
fastapi/: fast_api_get.yml  opencollection.yml
